code/libraries/joomlatools/component/koowa/resources/assets/scss/access.scss
.access-rules {

  joomla-tab {
    > section {
      display: none !important;
    }

    > section[active] {
      display: block !important;
    }

    ul, ol {
      margin: 0;
    }

    > ul a[role=tab][active], > ul a[role=tab]:hover {
      margin: 0;
      border-bottom-color: rgb(222, 226, 230);
      border-bottom-style: solid;
      border-bottom-width: 1px;
    }

    a[role=tab] {
      outline: 0;
    }

    // Keep the selected/active usergroup readable across Joomla 4, 5 and 6.
    // Joomla's joomla-tab.css forces light text (color: var(--template-text-light))
    // on the active/hover/focus vertical tab, which is invisible on the light
    // background used here. The version wrapper differs per Joomla (k-ui-j4-form on
    // J4, k-ui-j5-form on J5/J6), so scope under the version-agnostic .access-rules
    // wrapper and out-specify the core rule with the explicit tablist > button path.
    joomla-tab[orientation=vertical] > div[role=tablist] > button[role=tab] {
      color: #000;

      &[aria-selected=true], &[aria-expanded=true] {
        color: #000;
        font-weight: 700;
        background-color: #e6e6e6;
      }

      &:focus, &:hover {
        color: #000;
        background-color: #e6e6e6;
      }
    }
  }



  // Core variables and mixins
  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/variables"; // Modify this for custom colors, font-sizes, etc
  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/mixins";

  $iconSpritePath: "../../koowa/framework/img/glyphicons-halflings.png";
  $iconWhiteSpritePath: "../../koowa/framework/img/glyphicons-halflings-white.png";

  // CSS Reset
  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/reset";

  // Grid system and page structure
  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/scaffolding";
  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/grid";
  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/layouts";

  // Base CSS
  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/type";
  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/forms";
  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/tables";

  // Components: common
  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/sprites";
  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/dropdowns";
  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/wells";
  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/component-animations";
  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/close";

  // Components: Buttons & Alerts
  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/alerts"; // Note: alerts share common CSS with buttons and thus have styles in buttons

  // Components: Nav
  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/navs";
  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/navbar";

  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/tooltip";

  // Components: Misc
  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/media";
  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/labels-badges";

  // Utility classes
  @import "../../../../../../../../../../tools/kodekit-ui/src/scss/sass-twitter-bootstrap/utilities"; // Has to be last to override when necessary
}

.k-ui-j4-form
{
  .k-joomla-permissions
  {
    max-width: 80vw;

    #tip-rules {
      font-size: 0.8rem;
      font-style: italic;
    }

    details {
      display: none;
    }

    th span {
      font-size: 1rem !important;
    }

    .badge {
      display:inline-block;
      padding:.3rem .2rem;
      font-size:.75rem;
      font-weight:700;
      line-height:1;
      color:#fff;
      text-align:center;
      white-space:nowrap;
      vertical-align:baseline;
      border-radius:.2rem
    }

    .bg {

      &-primary {
        background-color:#132f53!important
      }

      &-secondary {
        background-color:#495057!important
      }

      &-success {
        background-color:#457d54!important
      }

      &-warning {
        background-color:#ffb514!important
      }

      &-danger {
        background-color:#c52827!important
      }

    }

    joomla-tab[orientation=vertical] button[role=tab] {

      &[aria-expanded=true] {
        font-weight: 700;
        background-color: #e6e6e6;
      }

      &:focus, &:hover {
        background-color: #e6e6e6;
      }

    }
  }
}

